Fix video alignment

--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ html {
     object-fit: cover;
 }
 
-.container {
+.video-section {
     width: 90vw;
     margin: 0 auto;
     display: flex;
@@ -92,6 +92,7 @@ html {
     justify-content: center;
     flex-wrap: wrap;
 }
+
 .icons img:hover{
     transform: scale(1.1);
     box-shadow: 2px 3px 16px;
